Fix mobile alignment of cards in listings

--- a/server/public/pages/listings-page.css
+++ b/server/public/pages/listings-page.css
@@ -39,16 +39,17 @@
   }
 }
 .listings-main .cards-container {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(1, 350px);
-  column-gap: 25px;
-  row-gap: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   margin-bottom: 1.5rem;
 }
 @media (min-width: 720px) {
   .listings-main .cards-container {
+    display: grid;
+    column-gap: 25px;
+    row-gap: 25px;
     grid-template-columns: repeat(2, 350px);
     justify-content: space-between;
   }
